--- a/package.json
+++ b/package.json
@@ -11,10 +11,12 @@
   },
   "dependencies": {
     "bootstrap": "^5.3.6",
+    "emailjs-com": "^3.2.0",
     "lucide-react": "^0.509.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
-    "react-router-dom": "^7.5.3"
+    "react-router-dom": "^7.5.3",
+    "sweetalert2": "^11.21.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.25.0",
