--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "bootstrap": "^5.3.6",
+    "convex": "^1.24.1",
     "emailjs-com": "^3.2.0",
     "lucide-react": "^0.509.0",
     "react": "^19.1.0",
