--- a/package.json
+++ b/package.json
@@ -12,10 +12,12 @@
   "dependencies": {
     "bcryptjs": "^3.0.2",
     "bootstrap": "^5.3.6",
+    "chart.js": "^4.4.9",
     "convex": "^1.24.1",
     "emailjs-com": "^3.2.0",
     "lucide-react": "^0.509.0",
     "react": "^19.1.0",
+    "react-chartjs-2": "^5.3.0",
     "react-dom": "^19.1.0",
     "react-router-dom": "^7.5.3",
     "sweetalert2": "^11.21.0"
